--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
         ></script> 
     </head>
-    <body class="bg-slate-200 flex justify-center items-center h-screen">
+    <body class="bg-slate-200 flex justify-center items-center h-svh">
         <div class="w-90 p-6 bg-[#F4F6F8] rounded-xl shadow-xl shadow-blue-100">
             <div class="flex justify-between items-center">
                 <h2 class="font-semibold text-xl text-slate-800">
@@ -104,3 +104,4 @@
         <script src="./app.js"></script>
     </body>
 </html>
+
