--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
             crossorigin="anonymous"
         ></script> 
     </head>
-    <body class="bg-slate-200 flex justify-center items-center h-svh">
-        <div class="w-90 p-6 bg-[#F4F6F8] rounded-xl shadow-xl shadow-blue-100">
+    <body class="bg-slate-200 flex justify-center items-center h-screen overflow-hidden">
+        <div class="w-90 p-6 bg-[#F4F6F8] rounded-xl shadow-xl shadow-blue-100 -mt-7">
             <div class="flex justify-between items-center">
                 <h2 class="font-semibold text-xl text-slate-800">
                     <i class="fa-solid fa-cloud"></i>Weatherly
@@ -104,4 +104,5 @@
         <script src="./app.js"></script>
     </body>
 </html>
+
 
